objects/ssot__CustodyItemRelation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ContextId__c</fullName>
        <label>Context</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContextObject__c</fullName>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemId__c</fullName>
        <label>Custody Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemRelationStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Custody Item Relation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658747569_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItemRelation_CustodyItemId_ma_rel</label>
        <referenceTo>ssot__CustodyItem__dlm</referenceTo>
        <relationshipLabel>CustodyItemRelation_CustodyItemId_ma_rel</relationshipLabel>
        <relationshipName>rel_1731658747569_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658749011_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItemRelation_ContextId_map_Ca_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CustodyItemRelation_ContextId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1731658749011_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658750632_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyItemRelation_ContextId_map_Co_rel</label>
        <referenceTo>ssot__Complaint__dlm</referenceTo>
        <relationshipLabel>CustodyItemRelation_ContextId_map_Co_rel</relationshipLabel>
        <relationshipName>rel_1731658750632_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>